# fastapi-oauth2-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
auth-server/: .gitignore  README.md  pyproject.toml
auth-server/app/: database.py  main.py
auth-server/app/core/: config.py  security.py  templates.py
auth-server/app/models/: user.py
auth-server/app/routes/: auth.py  oauth.py  user.py
auth-server/app/scripts/: create_test_users.py  init_db.py
auth-server/app/services/: oauth_service.py
auth-server/app/templates/: authorize.html  base.html  consent.html  index.html  login.html  register.html
auth-server/tests/: test_main.py
client-app/: README.md  pyproject.toml
client-app/app/: database.py  main.py  models.py  schemas.py  security.py
client-app/app/core/: config.py
client-app/app/models/: __init__.py  user.py
client-app/app/routers/: auth.py
client-app/app/routes/: auth.py  user.py
client-app/app/scripts/: init_db.py
client-app/app/static/: style.css
client-app/app/templates/: base.html  dashboard.html  error.html  index.html  login.html  register.html  register_success.html
client-app/tests/: conftest.py  test_main.py
