[project]
name = "fastapi-oauth2-server"
dependencies = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "C90", # mccabe complexity
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S",   # flake8-bandit
  "RUF", # Ruff-specific
]
ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
